[B]Version 3.8.1[/B]
Waseeb and news one added from their sites


[B]Version 3.8.0[/B]
WC 24x7 and few SSport


[B]Version 3.7.5[/B]
crichd fixed

[B]Version 3.7.4[/B]
watchric fixed

[B]Version 3.7.3[/B]
fixed smart tv


[B]Version 3.7.2[/B]
changed url

[B]Version 3.7.1[/B]
using swf now


[B]Version 3.7.0[/B]
Fixed sss


[B]Version 3.6.6[/B]
Fixed ads

[B]Version 3.6.5[/B]
Fixed pv2

[B]Version 3.6.4[/B]
Playwire fix


[B]Version 3.6.3[/B]
Small bug fix

[B]Version 3.6.2[/B]
added Streams and cricfree


[B]Version 3.6.1[/B]
added Bol and Geo etc, plus the sports section

[B]Version 3.6.0[/B]
added Bol and Geo etc, plus the sports section

B]Version 3.5.9[/B]
bigfix

B]Version 3.5.8[/B]
Added punjabi channels

B]Version 3.5.7[/B]
smart cric fix

B]Version 3.5.6[/B]
Fixed ads channel


[B]Version 3.5.5[/B]
fixed crichd and watchcric

[B]Version 3.5.4[/B]
add qtv

[B]Version 3.5.3[/B]
added channel24 and bol new yellow section (low quality)

[B]Version 3.5.2[/B]
icon updated

[B]Version 3.5.1[/B]
Added SSS in sports section

[B]Version 3.5.0[/B]
updated willow index and a settings to turn off Yellow channels


[B]Version 3.4.9[/B]
updates sports, removed some, updated some

[B]Version 3.4.8[/B]
Mac-change randomized


[B]Version 3.4.7[/B]
Mac-change and smartcric

[B]Version 3.4.6[/B]
added geo entertainment for EB

[B]Version 3.4.5[/B]
added alt sports


B]Version 3.4.4[/B]
greens channels back. another try

B]Version 3.4.3[/B]
greens channels back. thanks to arif

B]Version 3.4.2[/B]
-smartcric url changed

B]Version 3.4.1[/B]
- streamify links in smartcric modified

B]Version 3.4.0[/B]
- p3g links are now dynamic

B]Version 3.3.9[/B]
- smartcric with static ip

B]Version 3.3.8[/B]
- updated sports and indian

B]Version 3.3.7[/B]
- updated, green channels

B]Version 3.3.6[/B]
- updated, green channels vanished

B]Version 3.3.5[/B]
- green channels stopping fix, p3glinks updated and thanks to Gujjal, pope links too

B]Version 3.3.4[/B]