@@ -1,3 +1,7 @@
+[B]Version 3.8.2[/B]
+WL highlights
+
+
 [B]Version 3.8.1[/B]
 Waseeb and news one added from their sites
 
